<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forgotFragment"
            type="com.e.iamfound.ui.welcome.forgotPassword.ForgotPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_login_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.welcome.login.LoginFragment">

        <ScrollView
            android:id="@+id/login_scroll_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/full_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/imageView"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rect_blue"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">


                    <RelativeLayout
                        android:id="@+id/rl_phone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_45sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/rect_white"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/ccp_Code"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:background="@drawable/rect_blue_round"
                            android:gravity="center"
                            android:inputType="phone"
                            android:paddingRight="@dimen/_5sdp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="@dimen/_10sdp"
                            app:ccp_contentColor="@color/white"
                            app:ccp_defaultNameCode="US"
                            app:ccp_showFlag="true"
                            app:ccp_showNameCode="false" />

                        <EditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layout_toRightOf="@+id/ccp_Code"
                            android:background="@color/transparent"
                            android:gravity="left|center"
                            android:hint="@string/phone_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColor="@color/warm_grey"
                            android:textColorHint="@color/warm_grey"
                            android:textSize="@dimen/_12sdp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_send_otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:background="@drawable/underline"
                        android:text="@string/send_otp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rl_phone" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/indide_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:layout_marginTop="@dimen/_50sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_send_otp">

                        <TextView
                            android:id="@+id/tv_log"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/verify_phone"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_17sdp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginEnd="@dimen/_30sdp"
                            android:background="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_log" />

                        <TextView
                            android:id="@+id/tv_enter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/enter_otp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider" />

                        <RelativeLayout
                            android:id="@+id/rl_otp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginStart="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_35sdp"
                            android:layout_marginEnd="@dimen/_25sdp"
                            android:gravity="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_enter">


                            <EditText
                                android:id="@+id/otp1"
                                android:layout_width="@dimen/_50sdp"

                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:background="@drawable/rect_white"
                                android:gravity="center"
                                android:hint="@string/number"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:textColor="@color/dodgerBlue"
                                android:textColorHint="@color/babyBlue"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/otp2"
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:layout_toRightOf="@+id/otp1"
                                android:background="@drawable/rect_white"
                                android:gravity="center"
                                android:hint="@string/number"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:textColor="@color/dodgerBlue"
                                android:textStyle="bold"
                                android:textColorHint="@color/babyBlue"
                                android:textSize="@dimen/_12sdp" />

                            <EditText
                                android:id="@+id/otp3"
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:layout_toRightOf="@+id/otp2"
                                android:background="@drawable/rect_white"
                                android:gravity="center"
                                android:hint="@string/number"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:textColor="@color/dodgerBlue"
                                android:textStyle="bold"
                                android:textColorHint="@color/babyBlue"
                                android:textSize="@dimen/_12sdp" />

                            <EditText
                                android:id="@+id/otp4"
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:layout_toRightOf="@+id/otp3"
                                android:background="@drawable/rect_white"
                                android:gravity="center"
                                android:hint="@string/number"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:textColor="@color/dodgerBlue"
                                android:textStyle="bold"
                                android:textColorHint="@color/babyBlue"
                                android:textSize="@dimen/_12sdp" />
                        </RelativeLayout>


                        <TextView
                            android:id="@+id/tv_submit"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_40sdp"
                            android:background="@drawable/rect_white_outline"
                            android:gravity="center"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rl_otp" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </RelativeLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
