<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="createProfileFragment"
            type="com.e.iamfound.ui.welcome.createProfile.CreateProfileFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_login_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.welcome.login.LoginFragment">

        <ScrollView
            android:id="@+id/login_scroll_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <RelativeLayout
                    android:id="@+id/rl_image"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="@dimen/_110sdp"

                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/white_light_rect"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/_190sdp"
                        android:layout_height="@dimen/_110sdp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"

                        app:riv_corner_radius="@dimen/_3sdp"
                        app:riv_oval="false"
                        android:src="@drawable/ic_action_person" />


                           </RelativeLayout>

                <TextView
                    android:id="@+id/tv_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/underline_blue"
                    android:text="@string/upload_image"
                    android:textColor="@color/dodgerBlue"
                    android:textSize="@dimen/_13sdp"

                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/full_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_upload"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/rect_blue"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <RelativeLayout
                        android:id="@+id/rl_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_35sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/rect_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RelativeLayout
                            android:id="@+id/rl_nicon"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:background="@drawable/rect_blue_round"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:background="@drawable/userp"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toRightOf="@+id/rl_nicon"
                            android:background="@color/transparent"
                            android:gravity="left|center"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/warm_grey"
                            android:textColorHint="@color/warm_grey"
                            android:textSize="@dimen/_12sdp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/rect_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rl_name">

                        <RelativeLayout
                            android:id="@+id/rl_eicon"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:background="@drawable/rect_blue_round"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
android:background="@drawable/emaill"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toRightOf="@+id/rl_eicon"
                            android:background="@color/transparent"
                            android:gravity="left|center"
                            android:hint="@string/email"
                             android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/warm_grey"
                            android:textColorHint="@color/warm_grey"
                            android:textSize="@dimen/_12sdp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_address"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/rect_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rl_email">

                        <RelativeLayout
                            android:id="@+id/rl_aicon"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:background="@drawable/rect_blue_round"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/address" />
                        </RelativeLayout>

                        <EditText
                            android:id="@+id/et_address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toRightOf="@+id/rl_aicon"
                            android:background="@color/transparent"
                            android:gravity="left|center"
                            android:hint="@string/address"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/warm_grey"
                            android:textColorHint="@color/warm_grey"
                            android:textSize="@dimen/_12sdp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_aphone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/rect_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rl_address">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/ccp_Code"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:background="@drawable/rect_blue_round"
                            android:gravity="center"
                            android:inputType="phone"
                            android:paddingRight="@dimen/_5sdp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_10sdp"
                            app:ccp_contentColor="@color/white"
                            app:ccp_defaultNameCode="US"
                            app:ccp_showFlag="true"
                            app:ccp_showNameCode="false" />
                        <EditText
                            android:id="@+id/et_aphone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toRightOf="@+id/ccp_Code"
                            android:background="@color/transparent"
                            android:gravity="left|center"
                            android:hint="@string/alternate"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColor="@color/warm_grey"
                            android:textColorHint="@color/warm_grey"
                            android:textSize="@dimen/_12sdp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_reward"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/rect_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rl_aphone">

                        <RelativeLayout
                            android:id="@+id/rl_ricon"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
android:background="@drawable/reward"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>

                        <EditText
                            android:id="@+id/et_reward"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toRightOf="@+id/rl_ricon"
                            android:background="@color/transparent"
                            android:gravity="left|center"
                            android:hint="@string/reward"
                            android:imeOptions="actionDone"
                            android:inputType="textMultiLine"
                            android:paddingRight="@dimen/_10sdp"
                            android:textColor="@color/warm_grey"
                            android:textColorHint="@color/warm_grey"
                            android:textSize="@dimen/_12sdp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@drawable/rect_white_outline"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_25sdp"
                        android:paddingRight="@dimen/_25sdp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rl_reward" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </RelativeLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
